@@ -1,3 +1,10 @@
+Sun Jul 24 08:42:51 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/extconf.rb: test recvmsg allocates file descriptors for
+	  fd passing even with MSG_PEEK.
+
+	* ext/socket/ancdata.c: use the above test result.
+
 Sun Jul 24 01:24:31 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/specification.rb:  Restore behavior of
